--- a/static/style/main.css
+++ b/static/style/main.css
@@ -10,8 +10,10 @@ html, body{
   height: 100%;
   overflow: hidden;
 }
+
 body {
-  --header-height: 3rem;
+  --header-height: 2.8rem;
+  --header-bg: #353636;
 }
 
 @media only screen and (max-width: 1921px) {
