--- a/static/style/main.css
+++ b/static/style/main.css
@@ -16,6 +16,16 @@ body {
   --header-bg: #111933;
   --header-bg2: #303850;
 }
+.clr{
+  clear: both;
+}
+.clr-float::after {
+  content: " ";
+  width:0;
+  height: 0;
+  display: block;
+  clear: both;
+}
 
 @media only screen and (max-width: 1921px) {
   html {
