--- a/static/style/main.css
+++ b/static/style/main.css
@@ -15,6 +15,10 @@ body {
   --header-height: 2.8rem;
   --header-bg: #111933;
   --header-bg2: #303850;
+  --color-success: #19be6b;
+  --color-warning: #ff9900;
+  --color-error: #ed4014;
+  --color-info:#2db7f5;
 }
 ul {
   list-style: none;
@@ -45,6 +49,12 @@ ul.sww-ul-sww-clr-float::after{
   height: 0;
   display: block;
   clear: both;
+}
+.sww-float-left {
+  float: left;
+}
+.sww-float-right{
+  float: right;
 }
 
 @media only screen and (max-width: 1921px) {
