--- a/static/style/main.css
+++ b/static/style/main.css
@@ -62,6 +62,28 @@ ul.sww-ul-sww-clr-float::after{
   overflow: hidden;
   text-overflow: ellipsis;
 }
+/*普通页面的头部卡片,如blogList,albumList的统计卡片*/
+.sww-page-header{
+  background-color: #fff;
+  margin: 0.5rem auto;
+  padding: 0.6rem;
+  border: 0.05rem solid #ccc;
+  /* box-shadow: 0 0 0.2rem #ccc; */
+}
+.sww-page-header > span{
+  font-size: 0.7rem;
+  color: #999;
+  margin: 0 0 0 0.7rem;
+}
+.sww-page-header > span::after{
+  content: "|";
+  margin-left: 0.7rem;
+}
+.sww-page-main{
+  background-color: #fff;
+  border: 0.05rem solid #e5e5e5;
+  padding: 1rem;
+}
 
 @media only screen and (max-width: 1921px) {
   html {
