--- a/static/style/main.css
+++ b/static/style/main.css
@@ -86,6 +86,24 @@ ul.sww-ul-sww-clr-float::after{
   padding: 1rem;
 }
 
+input {
+  padding: 0.05rem 0.35rem;
+  height: 1.2rem;
+  line-height: 1.2rem;
+  border-radius: 0.15rem;
+  width: 100%;
+  font-size: 0.7rem;
+  color:#495660;
+  background-color: #fff;
+  background-image: none;
+  cursor: text;
+  transition: all .2s;
+  border: 0.05rem solid #dddee1;
+}
+input:focus{
+  border-color: #2d8bf03b;
+  box-shadow: 0 0 0.2rem #999;
+}
 @media only screen and (max-width: 1921px) {
   html {
     font-size: 20px;
