--- a/static/style/main.css
+++ b/static/style/main.css
@@ -85,7 +85,28 @@ ul.sww-ul-sww-clr-float::after{
   border: 0.05rem solid #e5e5e5;
   padding: 1rem;
 }
-
+.sww-page-main-info{
+  color: #888;
+  font-size: 0.5rem;
+  padding-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-bottom: 0.05rem solid #eee;
+  box-sizing: border-box;
+}
+.sww-page-main-info > span{
+  display: inline-block;
+  margin-right: 1rem;
+}
+.sww-page-main-info > span i{
+  margin-right: 0.3rem;
+}
+.sww-page-main-info > span.sww-css-tags > span{
+  padding: 0.05rem 0.2rem;
+  margin-right: 0.3rem;
+  background-color: #888;
+  color:#fff;
+  cursor: pointer;
+}
 input {
   padding: 0.05rem 0.35rem;
   height: 1.2rem;
