--- a/static/style/main.css
+++ b/static/style/main.css
@@ -141,8 +141,23 @@ input:focus{
   border-color: #2d8bf03b;
   box-shadow: 0 0 0.2rem #999;
 }
-@media only screen and (max-width: 1921px) {
+@media (min-width: 900px) and (max-width: 1199px) {
   html {
-    font-size: 20px;
+    font-size: 12px !important;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1499px) {
+  html {
+    font-size: 16px !important;
+  }
+}
+@media (min-width: 1500px) and (max-width: 1899px) {
+  html {
+    font-size: 20px !important;
+  }
+}
+@media (min-width: 1900px) and (max-width: 2799px) {
+  html {
+    font-size: 26px !important;
   }
 }
