add mdEditor in add article page.

--- a/static/style/main.css
+++ b/static/style/main.css
@@ -27,7 +27,7 @@ body {
   --color-text-4: #888;
   --color-text-5: #aaa;
   --color-text-6: #ccc;
-  --color-text-7: #ddd;
+  --color-border: #eee;
   --color-text-8: #fff;
   --color-text-fb-text: #444950;
 }
